# vgau-bot

abituriyent/: index.html
abituriyent/informatsiya-o-priyeme/: index.html
bot/: config.py  main.py
bot/data/: bot_data.json
bot/handlers/: __init__.py  callback_handlers.py  command_handlers.py  message_handlers.py  search_handlers.py
bot/keyboards/: __init__.py  menu_keyboards.py
bot/modules/: __init__.py  states.py
bot/utils/: data_loader.py  formatters.py  (+1 more)
vgau-bot-editor/: README.md  package.json  pnpm-lock.yaml  rspack.config.mjs  tailwind.config.js
vgau-bot-editor/tg-menu-editor-wasm/: Cargo.toml  README.md  build.rs  build_wasm.sh  index.html
vgau-bot-editor/tg-menu-editor-wasm/pkg/: favicon.txt  package.json
vgau-bot-editor/tg-menu-editor-wasm/src/: import_data.rs  lib.rs  main.rs  simple_graph.rs
vgau-bot-editor/tg-menu-editor-wasm/src/graph/: mod.rs
vgau-bot-editor/tg-menu-editor-wasm/src/graph/core/: mod.rs
vgau-bot-editor/tg-menu-editor-wasm/src/graph/history/: mod.rs
vgau-bot-editor/tg-menu-editor-wasm/src/graph/models/: connection.rs  mod.rs  node.rs  parameter.rs  port.rs
vgau-bot-editor/tg-menu-editor-wasm/src/graph/operations/: mod.rs
vgau-bot-editor/tg-menu-editor-wasm/src/graph/rendering/: mod.rs
vgau-bot-editor/tg-menu-editor-wasm/src/ui/: app.rs  menu_bar.rs  mod.rs  status_bar.rs  tabs.rs  utils.rs
vgau-bot-editor/tg-menu-editor-wasm/src/ui/components/: menu_bar.rs  mod.rs  status_bar.rs
vgau-bot-editor/tg-menu-editor-wasm/src/ui/components/tabs/: editor_tab.rs  export_tab.rs  help_tab.rs  mod.rs  settings_tab.rs
(+19 files in other folders)
